feat: index html

--- a/index.html
+++ b/index.html
@@ -12,25 +12,10 @@
       <div class="container">
         <div class="search-container">
           <input class="input-search" type="text" />
-          <ul class="input-search__list">
-            <li class="input-search__item">Redax</li>
-            <li class="input-search__item">Redax</li>
-            <li class="input-search__item">Redax</li>
-            <li class="input-search__item">Redax</li>
-            <li class="input-search__item">Redax</li>
-          </ul>
+          <ul class="input-search__list"></ul>
         </div>
         <div class="marked-container">
-          <ul class="marked__list">
-            <li class="marked__item">
-              <div class="marked__item-text">
-                <p>Name-react</p>
-                <p>Owner: facebook</p>
-                <p>Stars: 145231</p>
-              </div>
-              <button type="button" title="delette"></button>
-            </li>
-          </ul>
+          <ul class="marked__list"></ul>
         </div>
       </div>
     </div>
